objects/DMAPP__DM_Milestone_Question_Quicklink__c.object
<CustomObject>
    <description>This object is responsible for the association of Milestone Questions to Quicklinks. The values in this table are accessible through the Dealmaker Admin App.</description>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Milestone_Question__c</fullName>
        <label>Milestone Question</label>
        <referenceTo>DMAPP__DM_Milestone_Question__c</referenceTo>
        <relationshipLabel>Milestone Question Quicklinks</relationshipLabel>
        <relationshipName>Milestone_Question_Quicklinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Quicklink</label>
        <referenceTo>DMAPP__DM_Quicklink__c</referenceTo>
        <relationshipLabel>Milestone Question Quicklinks</relationshipLabel>
        <relationshipName>Milestone_Question_Quicklinks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Milestone Question Quicklink</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Question Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Question Quicklinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>